--- a/src/pages/Events/EventsPage.module.css
+++ b/src/pages/Events/EventsPage.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  padding: 2rem 1rem;
 }
 
 .header {
@@ -34,6 +35,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  max-height: calc(100vh - 12rem);
+  overflow-y: auto;
+  padding-right: 0.5rem;
 }
 
 .eventCard {
