--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -31,11 +31,20 @@
   align-items: center;
   justify-content: center;
   padding: 6rem 2rem 4rem;
+  position: relative;
+}
+
+.main.albumMain {
+  padding: 0;
 }
 
 @media (max-width: 768px) {
   .main {
     padding: 5rem 1.5rem 3rem;
+  }
+
+  .main.albumMain {
+    padding: 0;
   }
 }
 
