--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -38,12 +38,21 @@
   padding: 0;
 }
 
+.main.galleryMain {
+  padding: 0;
+  align-items: flex-start;
+}
+
 @media (max-width: 768px) {
   .main {
     padding: 5rem 1.5rem 3rem;
   }
 
   .main.albumMain {
+    padding: 0;
+  }
+
+  .main.galleryMain {
     padding: 0;
   }
 }
